@@ -10,6 +10,7 @@ Build 100107
     Added summary Service.
     Added summary service test.
     Added truncate table methods to repositories.
+    Added /summary rest controller endpoint.
 
 11/08/2019
 Build 100106
